--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -119,3 +119,19 @@ jobs:
       - name: Start cluster
         working-directory: ./provision
         run: sudo vagrant up
+
+  tofu:
+    needs: setup_cluster
+    runs-on: ubuntu-latest
+    steps:
+      - uses: opentofu/setup-opentofu@v1
+        with:
+          tofu_version: 1.11.1
+
+      - run: tofu init
+      - id: plan
+        run: tofu plan -no-color
+
+      - run: echo ${{ steps.plan.outputs.stdout }}
+      - run: echo ${{ steps.plan.outputs.stderr }}
+      - run: echo ${{ steps.plan.outputs.exitcode }}
