--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -6,6 +6,7 @@ on:
     branches:
       - main
   workflow_dispatch:
+  pull_request:
 
 jobs:
   check_submodule:
@@ -124,6 +125,7 @@ jobs:
     needs: setup_cluster
     runs-on: ubuntu-latest
     steps:
+      - uses: actions/checkout@v4
       - uses: opentofu/setup-opentofu@v1
         with:
           tofu_version: 1.11.1
