--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -131,9 +131,7 @@ jobs:
           tofu_version: 1.11.1
 
       - run: tofu init
-      - id: plan
+      - name: Run tofu plan
         run: tofu plan -no-color
-
-      - run: echo ${{ steps.plan.outputs.stdout }}
-      - run: echo ${{ steps.plan.outputs.stderr }}
-      - run: echo ${{ steps.plan.outputs.exitcode }}
+      - name: Run tofu apply
+        run: tofu apply -auto-approve
