--- a/provision/Vagrantfile
+++ b/provision/Vagrantfile
@@ -19,7 +19,7 @@ Vagrant.configure('2') do |config|
     ip: ip,
     auto_config: false,
     libvirt__dhcp_enabled: false,
-    libvirt__forward_mode: 'none'
+    libvirt__forward_mode: 'nat'
   config.vm.provision :shell, path: 'provision.sh', args: ip
   config.vm.provision :shell, path: 'grub.sh'
   config.vm.provision :shell, path: 'provision-pveproxy-certificate.sh', args: ip
