feat: Allow choosing the Vagrantfile and add cluster docs

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -119,6 +119,10 @@ jobs:
 
       - name: Start cluster
         working-directory: ./provision
+        run: ln -s Vagrantfile.single Vagrantfile sudo vagrant up
+
+      - name: Start cluster
+        working-directory: ./provision
         run: sudo vagrant up
 
       - uses: opentofu/setup-opentofu@v1
